--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "datapub-gdx",
+  "name": "datapub-nhs",
   "version": "0.1.0",
   "private": true,
   "dependencies": {
@@ -7,7 +7,7 @@
     "@testing-library/react": "^9.3.2",
     "@testing-library/user-event": "^7.1.2",
     "ckanClient": "git+https://github.com/datopian/ckan-client-js.git",
-    "datapub": "file:../experiments/datapub",
+    "datapub": "git+https://github.com/datopian/datapub.git",
     "react": "^16.13.1",
     "react-dom": "^16.13.1",
     "react-scripts": "3.4.3"
