[package][xs]: Mount datapub package to master

--- a/package.json
+++ b/package.json
@@ -7,7 +7,7 @@
     "@testing-library/react": "^9.3.2",
     "@testing-library/user-event": "^7.1.2",
     "ckanClient": "git+https://github.com/datopian/ckan-client-js.git",
-    "datapub": "git+https://github.com/datopian/datapub.git#feature/core",
+    "datapub": "git+https://github.com/datopian/datapub.git",
     "react": "^16.13.1",
     "react-dom": "^16.13.1",
     "react-scripts": "3.4.3"
