--- a/package.json
+++ b/package.json
@@ -38,6 +38,13 @@
   },
   "devDependencies": {
     "@babel/core": "^7.12.1",
+    "@babel/cli": "^7.11.6",
+    "@babel/preset-env": "^7.11.5",
+    "@babel/preset-react": "^7.10.4",
+    "@storybook/addon-controls": "^6.0.16",
+    "@storybook/addon-docs": "^6.0.21",
+    "@storybook/addon-info": "^5.3.21",
+    "@storybook/addons": "^6.0.16",
     "@storybook/addon-actions": "^6.0.26",
     "@storybook/addon-essentials": "^6.0.26",
     "@storybook/addon-links": "^6.0.26",
@@ -46,6 +53,13 @@
     "@storybook/react": "^6.0.26",
     "@storybook/storybook-deployer": "^2.8.7",
     "babel-loader": "^8.1.0",
-    "react-is": "^16.13.1"
+    "react-is": "^16.13.1",
+    "@testing-library/jest-dom": "^4.2.4",
+    "@testing-library/react": "^9.3.2",
+    "@testing-library/user-event": "^7.1.2",
+    "enzyme": "^3.11.0",
+    "enzyme-adapter-react-16": "^1.15.3",
+    "eslint-plugin-react-hooks": "^4.1.2",
+    "react-test-renderer": "^16.13.1"
   }
 }
