[fix][s]: Make datapub and ckan-client-js versions fixed in package dependencies

--- a/package.json
+++ b/package.json
@@ -6,8 +6,8 @@
     "@testing-library/jest-dom": "^4.2.4",
     "@testing-library/react": "^9.3.2",
     "@testing-library/user-event": "^7.1.2",
-    "ckanClient": "git+https://github.com/datopian/ckan-client-js.git",
-    "datapub": "git+https://github.com/datopian/datapub.git",
+    "ckanClient": "git+https://github.com/datopian/ckan-client-js.git#bfa869866c3bf50ada2bbc30376e0191c9c263c7",
+    "datapub": "git+https://github.com/datopian/datapub.git#320d2d786ef504157e6b24e7d5a8a67dc4eebdd4",
     "react": "^16.13.1",
     "react-dom": "^16.13.1",
     "react-scripts": "3.4.3"
